--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "mongoose_skeleton",
+  "name": "mongoose_populate",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeders/seed.js"
+    "watch": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
